--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -98,3 +98,7 @@ th, td {
 .evenrow {
     background-color: #f2f2f2; /* Light gray for even rows */
 }
+
+a:visited {
+    color: #cccccc; /* Example visited link color */
+}
