--- a/project/style.css
+++ b/project/style.css
@@ -17,7 +17,7 @@ header {
 }
 
 nav a {
-  color: black;
+  color: red; /* Changed from black to red */
   text-decoration: none;
   margin: 0 15px;
   font-weight: bold;
